--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,11 +15,12 @@
             <input type="text" name="address" required />
             <button type="submit">Submit</button>
         </form>
-        {{#each features}}
+        {{!-- {{#each features}}
         <div>
             {{this.place_name}}
+            <a href='/forecast/'></a>
         </div>
-        {{/each}}
+        {{/each}} --}}
     </main>
     {{>footer}}
 </body>
